feat: 更新依赖项，增加对 pyright 的支持并优化 lint 配置

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,8 @@
         "chouzz.vscode-innosetup",
         "davidanson.vscode-markdownlint",
         "ms-python.debugpy",
-        "ms-python.python"
+        "ms-python.black-formatter",
+        "ms-python.python",
+        "ms-python.vscode-pylance"
     ]
 }
