--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ dependencies = ["ttk-text>=0.2.0"]
 
 [dependency-groups]
 test = ["pytest>=8.3.5"]
-lint = ["black>=25.1.0"]
+lint = [
+    "black>=25.1.0",
+    "pyright>=1.1.403",
+]
 build = [
     "pyinstaller<7.0.0,>=6.11.0",
     "pyinstaller-versionfile<4.0.0,>=3.0.0",
@@ -46,3 +49,10 @@ is-purelib = true
 
 [tool.black]
 line-length = 120
+
+[tool.pyright]
+strictListInference = true
+strictDictionaryInference = true
+strictSetInference = true
+deprecateTypingAliases = true
+typeCheckingMode = "basic"
