refactor: 重构项目代码以提高可维护性和代码质量
- 更新类型注解，使用 | 替代 Union
- 优化导入语句，移除未使用的导入
- 重命名变量和函数，提高代码可读性
- 调整布局和样式相关的代码，使用字符串替代常量
- 修复部分代码格式问题，如使用 "end" 替代 END

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,7 @@ dependencies = ["ttk-text>=0.2.0"]
 
 [dependency-groups]
 test = ["pytest>=8.3.5"]
-lint = [
-    "black>=25.1.0",
-    "pyright>=1.1.403",
-]
+lint = ["black>=25.1.0", "pyright>=1.1.403"]
 build = [
     "pyinstaller<7.0.0,>=6.11.0",
     "pyinstaller-versionfile<4.0.0,>=3.0.0",
@@ -56,3 +53,4 @@ strictDictionaryInference = true
 strictSetInference = true
 deprecateTypingAliases = true
 typeCheckingMode = "basic"
+ignore = ["src/vcf_generator_lite/widgets/tkhtmlview/html_parser.py"]
