refactor: 优化类型注解并添加类型存根文件
- 修改 pyproject.toml，启用严格类型检查并添加忽略项
- 更新多个模块的类型注解，提高代码可读性和安全性
- 添加 ttk_text 模块的类型存根文件，支持更好的类型检查
- 优化部分代码结构，以符合新的类型注解要求

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,5 +52,13 @@ strictListInference = true
 strictDictionaryInference = true
 strictSetInference = true
 deprecateTypingAliases = true
-typeCheckingMode = "basic"
-ignore = ["src/vcf_generator_lite/widgets/tkhtmlview/html_parser.py"]
+typeCheckingMode = "strict"
+reportUnknownMemberType = "none"
+reportUnknownParameterType = "none"
+reportUnknownArgumentType = "none"
+reportIncompatibleVariableOverride = "none"
+reportMissingParameterType = "none"
+reportUnknownVariableType = "none"
+reportUnnecessaryIsInstance = "none"
+reportImplicitOverride = "error"
+ignore = ["src/vcf_generator_lite/widgets/tkhtmlview", "typings"]
