build: 添加 pyright 代码检查工具
在 pyproject.toml 文件中添加了 lint 命令，使用 pyright 进行代码检查。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ build_app = { call = "scripts.build_app:main", help = "Build app." }
 version = { call = "scripts.version:main", help = "Display or modify the project version number." }
 test = { shell = "pytest", help = "Run tests." }
 format = { shell = "black .", help = "Format code." }
+lint = { shell = "pyright", help = "Lint code." }
 prepare_innosetup_extensions = { call = "scripts.prepare_innosetup_extensions:main", help = "Download InnoSetup language files." }
 docs_generate_os_notices = { call = "scripts.docs.generate_os_notices:main", help = "Generate Open Source notices." }
 
