build(deps): 更新依赖并调整版本要求
- 更新 certifi 从 2025.6.15 到 2025.8.3
- 更新 charset-normalizer 从 3.4.2 到 3.4.3
- 更新 pyinstaller 从 6.14.2 到 6.15.0
- 更新 pyinstaller-hooks-contrib 从 2025.5 到 2025.8
- 更新 requests 从 2.32.4 到 2.32.5
- 更新 ttk-text 从 0.2.0 到 0.2.1
- 调整 pyinstaller 版本要求为 >=6.15.0
- 移除 pyinstaller-versionfile 版本上限

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,19 @@ authors = [{ name = "Jesse205", email = "jesse205@qq.com" }]
 license = "Apache-2.0"
 readme = "README.md"
 requires-python = ">=3.12,<3.14"
-dependencies = ["ttk-text>=0.2.0"]
+dependencies = ["ttk-text>=0.2.1"]
 
 [dependency-groups]
-test = ["pytest>=8.3.5"]
-lint = ["black>=25.1.0", "pyright>=1.1.403"]
+test = [
+    "pytest>=8.4.1",
+]
+lint = [
+    "black>=25.1.0",
+    "pyright>=1.1.403",
+]
 build = [
-    "pyinstaller<7.0.0,>=6.11.0",
-    "pyinstaller-versionfile<4.0.0,>=3.0.0",
+    "pyinstaller>=6.15.0",
+    "pyinstaller-versionfile>=3.0.1",
     "requests>=2.32.3",
 ]
 
