--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ build = [
     "pyinstaller-versionfile>=3.0.1",
     "requests>=2.32.5",
 ]
+dev = [
+    "colorlog>=6.9.0",
+]
 
 [project.urls]
 Repository = "https://gitee.com/HelloTool/VCFGeneratorLiteForTkinter"
