--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -40,28 +40,25 @@ body:
       label: 截图或视频
       description: 如果可以的话，上传任何关于 bug 的截图。
       placeholder: "[在这里上传图片]"
-  - type: dropdown
-    id: operating-systems
+  - type: textarea
+    id: operating-system
     attributes:
       label: 操作系统
-      description: 您当前正在哪个操作系统使用我们软件？
-      multiple: true
-      options:
-        - Windows
-        - macOS
-        - HarmonyOS
-        - KaihongOS
-        - 统信 UOS
-        - Deepin
-        - 银河麒麟
-        - Android
-        - OpenHarmony
-        - FreeBSD
-        - 其他 Linux 发行版
-        - 其他操作系统
-        - 我不知道
+      description: 问题发生在什么操作系统上？
+      placeholder: 例如：Windows 11 专业版 24H2 26100.6725
     validations:
       required: true
+  - type: textarea
+    id: enviroments
+    attributes:
+      label: 运行环境
+      description: 应用的运行环境是什么？
+      placeholder: |
+        例如：
+        - 系统版本号：24H2 26100.6725
+        - Python（如果有）：3.13.0
+    validations:
+      required: false
   - type: dropdown
     id: package-types
     attributes:
@@ -69,8 +66,8 @@ body:
       description: 您当前正在使用我们应用的什么软件包类型？
       multiple: true
       options:
-        - Inno Setup 安装包 (*_setup.exe)
-        - 便携包（压缩文件）(*_portable.zip)
+        - Windows 安装程序 (*_win-amd64_setup.exe)
+        - Windows 便携版（压缩包）(*_win-amd64_portable.zip)
         - Python ZIP 应用 (*_zipapp.pyzw)
         - 我不知道
     validations:
