--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,23 @@
 [project]
-name = "vcf_generator_lite"
+name = "vcf-generator-lite"
 version = "4.2.1"
 description = "A simple VCF generator"
 authors = [{ name = "Jesse205", email = "jesse205@qq.com" }]
 license = "Apache-2.0"
 readme = "README.md"
-requires-python = ">=3.12,<3.14"
+requires-python = ">=3.12"
 dependencies = ["ttk-text>=0.2.2"]
 
 [dependency-groups]
 test = [
-    "pytest>=8.4.1",
+    "pytest>=8.4.2",
 ]
 lint = [
-    "black>=25.1.0",
-    "pyright>=1.1.405",
+    "black>=25.9.0",
+    "pyright>=1.1.407",
 ]
 build = [
-    "pyinstaller>=6.15.0",
+    "pyinstaller>=6.16.0",
     "pyinstaller-versionfile>=3.0.1",
     "requests>=2.32.5",
 ]
