docs: 重构文档结构并更新链接路径
- 将 README.md 和 README.zh.md 移至 docs 目录并重命名
- 更新文档内图片与链接的相对路径引用
- 统一文档间超链接格式，修正锚点与路径分隔符
- 修正开源声明文件名及引用路径
- 更新脚本中配置文件路径常量
- 调整表格格式以提高可读性
- 修正已知问题条目缩进错误
- 更新项目仓库与发行版链接标识符格式

--- a/os-notices.toml
+++ b/os-notices.toml
@@ -1,5 +1,5 @@
 template = "./docs/legal/os_notices_template.py"
-output = "./docs/legal/os_notices.md"
+output = "./docs/legal/os-notices.md"
 
 [[notices]]
 name = "CPython"
