--- a/.github/ISSUE_TEMPLATE/enhancement.yaml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yaml
@@ -1,16 +1,16 @@
-name: 功能建议
-description: 对本项目提出一个功能建议
-title: '[功能建议]: '
+name: "[简体中文] 改进建议"
+description: 对本项目提出一个改进建议
+title: '[改进建议]: '
 labels: [ 'enhancement' ]
 body:
   - type: markdown
     attributes:
       value: |
-        感谢提出功能建议，我们将仔细考虑！
+        感谢提出改进建议，我们将仔细考虑！
   - type: textarea
     id: related-problem
     attributes:
-      label: 你的功能建议是否和某个问题相关？
+      label: 你的改进建议是否和某个问题相关？
       description: 清晰并简洁地描述问题是什么，例如，当我...时，我总是感到困扰。
   - type: textarea
     id: desired-solution
