fix(os-notices): 修正ttk-text依赖项的名称和仓库信息
修正了os-notices.toml文件中ttk-text依赖项的配置信息，
包括组件名称从"TtkText"改为"ttk-text"，
仓库地址从"Jesse205/TtkText"更新为"HelloTool/ttk-text"，
以及相应的许可证链接也进行了更新。

--- a/os-notices.toml
+++ b/os-notices.toml
@@ -14,9 +14,9 @@ copyrights = [
 ]
 
 [[notices]]
-name = "TtkText"
+name = "ttk-text"
 dependency = "ttk-text"
-repository = "https://github.com/Jesse205/TtkText"
+repository = "https://github.com/HelloTool/ttk-text"
 license = "MIT License"
-license-url = "https://github.com/Jesse205/TtkText/blob/v{version}/LICENSE"
+license-url = "https://github.com/HelloTool/ttk-text/blob/v{version}/LICENSE"
 copyrights = ["Copyright (c) 2025 Jesse205"]
