refactor(pyproject.toml): 移除tkhtmlview的忽略配置
移除了pyproject.toml中对src/vcf_generator_lite/widgets/tkhtmlview路径的忽略配置，
现在只保留typings目录的忽略配置。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,4 +70,4 @@ reportMissingParameterType = "none"
 reportUnknownVariableType = "none"
 reportUnnecessaryIsInstance = "none"
 reportImplicitOverride = "error"
-ignore = ["src/vcf_generator_lite/widgets/tkhtmlview", "typings"]
+ignore = ["typings"]
