feat: 更新项目版本并优化构建配置
- 将项目版本从 4.2.1 更新到 4.3.0
- 更新 pdm.lock 中的依赖包版本，包括 black、pytest、pyinstaller 等
- 修改 GitHub Actions 构建工作流配置
- 将 Python 3.12 和 3.13 的 Zip 应用构建选项合并为统一的 Python 3 Zip 应用构建选项
- 更新构建工作流中的 Python 版本为 3.14t
- 修复了工作流配置中的一些默认值设置

--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -11,12 +11,8 @@ on:
         description: Build Windows Portable
         type: boolean
         default: true
-      build-python312-zipapp:
-        description: Build Python 3.12 Zip Application
-        type: boolean
-        default: true
-      build-python313-zipapp:
-        description: Build Python 3.13 Zip Application
+      build-python3-zipapp:
+        description: Build Python 3 Zip Application
         type: boolean
         default: true
   workflow_call:
@@ -29,12 +25,8 @@ on:
         description: Build Windows Portable
         type: boolean
         default: false
-      build-python312-zipapp:
-        description: Build Python 3.12 Zip Application
-        type: boolean
-        default: false
-      build-python313-zipapp:
-        description: Build Python 3.13 Zip Application
+      build-python3-zipapp:
+        description: Build Python 3 Zip Application
         type: boolean
         default: false
 
@@ -49,7 +41,7 @@ jobs:
     with:
       os: windows-latest
       package-type: installer
-      python-version: 3.13
+      python-version: 3.14t
       artifact-path: dist/*_setup.exe
       artifact-name: windows-installer
 
@@ -60,28 +52,17 @@ jobs:
     with:
       os: windows-latest
       package-type: portable
-      python-version: 3.13
+      python-version: 3.14t
       artifact-path: dist/*_portable.zip
       artifact-name: windows-portable
 
-  build-python312-zipapp:
-    if: ${{ inputs.build-python312-zipapp }}
-    name: Build Python 3.12 Zip Application
+  build-python3-zipapp:
+    if: ${{ inputs.build-python3-zipapp }}
+    name: Build Python 3 Zip Application
     uses: ./.github/workflows/build.yml
     with:
       os: ubuntu-latest
       package-type: zipapp
-      python-version: 3.12
+      python-version: 3.14t
       artifact-path: dist/*_zipapp.pyzw
-      artifact-name: python312-zipapp
-
-  build-python313-zipapp:
-    if: ${{ inputs.build-python313-zipapp }}
-    name: Build Python 3.13 Zip Application
-    uses: ./.github/workflows/build.yml
-    with:
-      os: ubuntu-latest
-      package-type: zipapp
-      python-version: 3.13
-      artifact-path: dist/*_zipapp.pyzw
-      artifact-name: python313-zipapp
+      artifact-name: python3-zipapp
