build: 从PDM切换到uv作为包管理工具
- 将包管理工具从PDM替换为uv
- 更新VSCode配置以使用Ruff替代Black作为代码格式化工具
- 修改开发文档中的依赖安装和运行命令
- 更新.gitattributes文件添加.ico二进制文件支持
- 修复文档模板中的字符串格式化语法

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
-    "pyproject.toml": "pdm.lock, .editorconfig, .markdownlint.json",
+    "pyproject.toml": "uv.lock, .editorconfig, .markdownlint.json",
     "*": "${basename}.*.${extname}",
   },
   "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.defaultFormatter": "charliermarsh.ruff",
     "editor.formatOnSave": true
   },
   "python.testing.pytestArgs": [
