--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,8 +3,8 @@
         "chouzz.vscode-innosetup",
         "davidanson.vscode-markdownlint",
         "ms-python.debugpy",
-        "ms-python.black-formatter",
         "ms-python.python",
-        "ms-python.vscode-pylance"
+        "ms-python.vscode-pylance",
+        "charliermarsh.ruff"
     ]
 }
