--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,26 +4,19 @@ version = "4.3.0"
 description = "A simple VCF generator"
 authors = [{ name = "Jesse205", email = "jesse205@qq.com" }]
 license = "Apache-2.0"
-readme = "docs/README.md"
+readme = "README.md"
 requires-python = ">=3.12"
 dependencies = ["ttk-text>=0.2.2"]
 
 [dependency-groups]
-test = [
-    "pytest>=9.0.2",
-]
-lint = [
-    "black>=25.12.0",
-    "pyright>=1.1.407",
-]
+test = ["pytest>=9.0.2"]
+lint = ["pyright>=1.1.407", "ruff>=0.14.10"]
 build = [
     "pyinstaller>=6.17.0",
     "pyinstaller-versionfile>=3.0.1",
     "requests>=2.32.5",
 ]
-dev = [
-    "colorlog>=6.9.0",
-]
+dev = ["colorlog>=6.9.0"]
 
 [project.urls]
 Repository = "https://gitee.com/HelloTool/VCFGeneratorLiteWithTkinter"
@@ -53,8 +46,15 @@ docs_generate_os_notices = { call = "scripts.docs.generate_os_notices:main", hel
 [tool.pdm.build]
 is-purelib = true
 
-[tool.black]
+[tool.ruff]
 line-length = 120
+
+[tool.ruff.format]
+docstring-code-format = true
+line-ending = "lf"
+
+[tool.ruff.lint]
+exclude = ["typings/*"]
 
 [tool.pyright]
 strictListInference = true
