chore(build): 更新格式化命令并优化ruff配置
- 将文档中的格式化命令从 `uv format` 更新为 `uv run ruff format`
- 在pyproject.toml中添加ruff格式化排除配置，排除tests和typings目录
- 移除多余的空行以保持代码整洁

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,13 +48,11 @@ is-purelib = true
 
 [tool.ruff]
 line-length = 120
+extend-exclude = ["tests", "typings/**"]
 
 [tool.ruff.format]
 docstring-code-format = true
 line-ending = "lf"
-
-[tool.ruff.lint]
-exclude = ["typings/*"]
 
 [tool.pyright]
 strictListInference = true
