build: 更新构建配置并优化依赖管理
- 修改 pyproject.toml 将构建系统从 pdm-backend 切换到 uv_build
- 更新开发依赖配置，使用 include-group 方式包含 lint、test 和 build 组
- 移除 PDM 相关配置，简化构建系统配置
- 在文档中更新依赖安装命令，从 "uv sync --all-groups" 改为 "uv sync"
- 更新 uv.lock 文件以反映新的依赖关系和版本要求

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,13 @@ build = [
     "pyinstaller-versionfile>=3.0.1",
     "requests>=2.32.5",
 ]
-dev = ["colorlog>=6.9.0"]
+dev = [
+    "colorlog>=6.9.0",
+    { include-group = "lint" },
+    { include-group = "test" },
+    { include-group = "build" },
+]
+
 
 [project.urls]
 Repository = "https://gitee.com/HelloTool/VCFGeneratorLiteWithTkinter"
@@ -27,24 +33,8 @@ Issues = "https://gitee.com/HelloTool/VCFGeneratorLiteWithTkinter/issues/new/cho
 vcf-generator-lite = "vcf_generator_lite.__main__:main"
 
 [build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
-
-[tool.pdm]
-plugins = ["pdm-packer"]
-distribution = true
-
-[tool.pdm.scripts]
-build_app = { call = "scripts.build_app:main", help = "Build app." }
-version = { call = "scripts.version:main", help = "Display or modify the project version number." }
-test = { shell = "pytest", help = "Run tests." }
-format = { shell = "black .", help = "Format code." }
-lint = { shell = "pyright", help = "Lint code." }
-prepare_innosetup_extensions = { call = "scripts.prepare_innosetup_extensions:main", help = "Download InnoSetup language files." }
-docs_generate_os_notices = { call = "scripts.docs.generate_os_notices:main", help = "Generate Open Source notices." }
-
-[tool.pdm.build]
-is-purelib = true
+requires = ["uv_build>=0.9.22,<0.10.0"]
+build-backend = "uv_build"
 
 [tool.ruff]
 line-length = 120
