chore(ci): 更新工作流配置以使用 uv 和新依赖管理
- 将 actions/checkout 从 v4 升级到 v6
- 用 astral-sh/setup-uv@v7 替换 pdm-project/setup-pdm@v4
- 用 uv sync 替换 pdm install 命令
- 将 actions/upload-artifact 从 v4 升级到 v6
- 在 test.yml 中将构建矩阵扩展到 Python 3.14 和 3.14t
- 注释掉 test.yml 中的 push 触发器并添加 workflow_dispatch
- 从 ruff 配置中移除 tests 目录的排除规则
- 更新构建命令为 uv run scripts/build_app.py
- 更新测试命令为 uv run pytest

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,18 +38,18 @@ jobs:
     runs-on: ${{ inputs.os }}
     name: Build ${{ inputs.artifact-name }}
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Python and PDM
-        uses: pdm-project/setup-pdm@v4
+      - uses: actions/checkout@v6
+
+      - name: Install uv and set the Python version
+        uses: astral-sh/setup-uv@v7
+      - name: Set up Python
+        uses: actions/setup-python@v6
         with:
-          python-version: ${{ inputs.python-version }}
-          architecture: x64
+          python-version-file: ".python-version"
 
       - name: Install Dependencies
         run: |
-          pdm use ${{ inputs.python-version }}
-          pdm install -G:all
-          pdm install --plugins
+          uv sync
       
       # Do not use UPX for speed.
       # - name: Prepare UPX for Windows
@@ -57,11 +57,11 @@ jobs:
       #   run: choco install upx
 
       - name: Build Package
-        run: pdm run build_app -t ${{ inputs.package-type }}
+        run: uv run scripts/build_app.py -t ${{ inputs.package-type }}
 
       - name: Upload Package
         id: upload-package
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: ${{ inputs.artifact-name }}
           path: ${{ inputs.artifact-path }}
