feat(ttk-text): 升级到0.3.0版本
- 将依赖从ttk-text>=0.2.2升级到ttk-text==0.3.0
- 添加ThemedTextFrame类用于管理主题化文本框架状态
- 新增BoundText和BoundWidget命名元组用于管理绑定的文本和组件
- 改进类型提示文件，添加详细的文档字符串和参数说明
- 更新ThemedText继承链以使用ThemedTextFrame进行样式管理
- 优化ScrolledText和utils模块的类型定义

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [{ name = "Jesse205", email = "jesse205@qq.com" }]
 license = "Apache-2.0"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["ttk-text>=0.2.2"]
+dependencies = ["ttk-text==0.3.0"]
 
 [dependency-groups]
 test = ["pytest>=9.0.2"]
